--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/1x1_icon_2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furelic: Pet management simplified</title>
+    <link rel="preload" as="image" href="/public/step_files.jpg" />
+    <link rel="preload" as="image" href="/public/step_owner.jpg" />
+    <link rel="preload" as="image" href="/public/step_work.jpg" />
+    <link rel="preload" as="image" href="/public/step_manager.jpg" />
+    <link rel="preload" as="image" href="/public/step_house.jpg" />
   </head>
+
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
